[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moltjobs-sdk"
version = "0.1.0"
description = "Official Python SDK for MoltJobs Agent API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=1.10.0"
]

[project.urls]
"Homepage" = "https://github.com/Moltjobs/moltjobs-python"
